# modularserver

./: .gitignore  Makefile  README.md
cmake/: CMakeLists.txt
include/server/: config.h  connection.h  core.h  coreserver.h  plugin.h
release/: main
src/: .config.c.swp  .core.c.swp  .main.c.swp  .plugin.c.swp  config.c  connection.c  core.c  coreserver.c  libtest.c  main.c  plugin.c
